--- a/2-Browsers/Week1/assignment/ex4-whatsTheTime/index.html
+++ b/2-Browsers/Week1/assignment/ex4-whatsTheTime/index.html
@@ -6,6 +6,7 @@
     <title>What's The Time?</title>
   </head>
   <body>
+    <div id="current-time"></div>
     <script src="index.js"></script>
   </body>
 </html>
